Ajout controller et entité

--- a/templates/master/index.html.twig
+++ b/templates/master/index.html.twig
@@ -13,8 +13,8 @@
 
     This friendly message is coming from:
     <ul>
-        <li>Your controller at <code><a href="{{ 'src/Controller/UsersController.php'|file_link(0) }}">src/Controller/UsersController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'templates/users/index.html.twig'|file_link(0) }}">templates/users/index.html.twig</a></code></li>
+        <li>Your controller at <code><a href="{{ 'src/Controller/MastersController.php'|file_link(0) }}">src/Controller/MasterController.php</a></code></li>
+        <li>Your template at <code><a href="{{ 'templates/master/index.html.twig'|file_link(0) }}">templates/master/index.html.twig</a></code></li>
     </ul>
 </div>
 {% endblock %}
