--- a/templates/company/index.html.twig
+++ b/templates/company/index.html.twig
@@ -13,8 +13,8 @@
 
     This friendly message is coming from:
     <ul>
-        <li>Your controller at <code><a href="{{ 'src/Controller/ArticleController.php'|file_link(0) }}">src/Controller/ArticleController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'templates/article/index.html.twig'|file_link(0) }}">templates/article/index.html.twig</a></code></li>
+        <li>Your controller at <code><a href="{{ 'src/Controller/CompanyController.php'|file_link(0) }}">src/Controller/CompanyController.php</a></code></li>
+        <li>Your template at <code><a href="{{ 'templates/company/index.html.twig'|file_link(0) }}">templates/company/index.html.twig</a></code></li>
     </ul>
 </div>
 {% endblock %}
